force-app/main/default/objects/FS_Outlet_Distributors__c/FS_Outlet_Distributors__c.object-meta.xml
<CustomObject>
    <label>Outlet Distributor</label>
    <nameField>
        <displayFormat>DS-{0000}</displayFormat>
        <label>Distributor Accounts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Distributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>