force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Btlr_Dlvr_Pnt_No__c.field-meta.xml
<CustomField>
    <fullName>FS_Btlr_Dlvr_Pnt_No__c</fullName>
    <label>Outlet ACN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>