force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_CSD_Gallons__c.field-meta.xml
<CustomField>
    <fullName>FS_CSD_Gallons__c</fullName>
    <label>CSD Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>