force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distribution_Center_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Distribution_Center_ACN__c</fullName>
    <label>Distribution Center ACN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>