force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distribution_Center_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Distribution_Center_City__c</fullName>
    <formula>FS_Distributor__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Center City</label>
    <type>Text</type>
</CustomField>