force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distribution_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Distribution_Center_Name__c</fullName>
    <formula>FS_Distributor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Center Name</label>
    <type>Text</type>
</CustomField>