force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distribution_Center_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Distribution_Center_State__c</fullName>
    <formula>FS_Distributor__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Center State</label>
    <type>Text</type>
</CustomField>