force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Distributor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outlets (Distributors)</relationshipLabel>
    <relationshipName>Distributor_Account1</relationshipName>
    <type>Lookup</type>
</CustomField>