force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distributor_Ownership_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Ownership_ID__c</fullName>
    <label>Distributor Ownership ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>