force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Distributor_Sweetener_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Sweetener_Status__c</fullName>
    <formula>Text(FS_Distributor__r.FS_Distributor_Sweetener_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Sweetener Status</label>
    <type>Text</type>
</CustomField>