force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_External_Id__c</fullName>
    <description>Combination of Outlet ACN, pipe and Distributor ACN
ACN must be of 10 char (with leading zeros)</description>
    <externalId>true</externalId>
    <inlineHelpText>OutletACN|DistributorACN
ACN size must be 10 with leading Zeros.</inlineHelpText>
    <label>External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>