force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Last_Update_Date_Matrix__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Update_Date_Matrix__c</fullName>
    <label>Last Update Date (Matrix)</label>
    <type>Date</type>
</CustomField>