force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Outlet_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_City__c</fullName>
    <formula>FS_Outlet__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet City</label>
    <type>Text</type>
</CustomField>