force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_Name__c</fullName>
    <formula>FS_Outlet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet Name</label>
    <type>Text</type>
</CustomField>