force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Outlet_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet_State__c</fullName>
    <formula>FS_Outlet__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outlet State</label>
    <type>Text</type>
</CustomField>