force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Prior_Year_CSD_Std_Phy_Cases__c.field-meta.xml
<CustomField>
    <fullName>FS_Prior_Year_CSD_Std_Phy_Cases__c</fullName>
    <label>Prior Year CSD Std Phy Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>