force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Prior_Year_Fountain_Gallons__c.field-meta.xml
<CustomField>
    <fullName>FS_Prior_Year_Fountain_Gallons__c</fullName>
    <label>Prior Year Fountain Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>