force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipping_City__c</fullName>
    <formula>FS_Distributor__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>