force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Shipping_State__c</fullName>
    <formula>FS_Distributor__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>