force-app/main/default/objects/FS_Outlet_Distributors__c/fields/FS_Tea_Gallons__c.field-meta.xml
<CustomField>
    <fullName>FS_Tea_Gallons__c</fullName>
    <label>Tea Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>